--- a/04_Analysis_Script_SensitivityCovariatesALL.Rmd
+++ b/04_Analysis_Script_SensitivityCovariatesALL.Rmd
@@ -62,7 +62,7 @@ options(
 
 ```{r prepare_datasets, results='asis'}
 
-df <- openxlsx::read.xlsx(file.path(working_directory, 'long.xlsx'))
+df <- openxlsx::read.xlsx(file.path('long.xlsx'))
 df_original <- df
 
 df_double <- prepare_data(df, use_mi = use_mi)[[1]]
@@ -302,7 +302,7 @@ pa_sub <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path(working_directory, "models_cache", "pa_sub")
+  file = file.path("models_cache", "all_covariates_pa_sub")
 )
 
 
@@ -417,7 +417,7 @@ pa_obj_log <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path(working_directory, "models_cache", "pa_obj_log")
+  file = file.path("models_cache", "all_covariates_pa_obj_log")
 )
 
 
@@ -527,7 +527,7 @@ mood <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path(working_directory, "models_cache", "mood")
+  file = file.path("models_cache", "all_covariates_mood")
 )
 
 
@@ -631,7 +631,7 @@ reactance <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path(working_directory, "models_cache", "reactance")
+  file = file.path("models_cache", "all_covariates_reactance")
 
 )
 
@@ -742,7 +742,7 @@ is_reactance <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path(working_directory, "models_cache", "is_reactance")
+  file = file.path("models_cache", "all_covariates_is_reactance")
 
 )
 
@@ -820,7 +820,7 @@ summary_all_models <- all_models %>%
 
 export_xlsx(summary_all_models, 
             rows_to_pack = rows_to_pack_final,
-            file.path(working_directory, "Output", "AllCovariates_SensCovariates.xlsx"),
+            file.path("Output", "SensitivityCovariates", "AllCovariates_SensCovariates.xlsx"),
             merge_option = 'both', 
             simplify_2nd_row = TRUE,
             colwidths = c(40, 7.4, 12.85, 7.4, 12.85,7.4, 12.85,7.4, 12.85,7.4, 12.85),
