--- a/02_Analysis_Script_As_Preregistred.Rmd
+++ b/02_Analysis_Script_As_Preregistred.Rmd
@@ -967,7 +967,7 @@ persuasion_pa_sub_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "persuasion_pa_sub_ind")
+  file = file.path("models_cache_brms", "persuasion_pa_sub_ind")
 )
 
 
@@ -1051,7 +1051,7 @@ persuasion_pa_sub_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_persuasion_pa_sub_apim")
+  file = file.path("models_cache_brms", "as_preregistered_persuasion_pa_sub_apim")
 )
 
 
@@ -1155,7 +1155,7 @@ persuasion_pa_obj_log_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_persuasion_pa_obj_log_ind")
+  file = file.path("models_cache_brms", "as_preregistered_persuasion_pa_obj_log_ind")
 )
 
 
@@ -1239,7 +1239,7 @@ persuasion_pa_obj_log_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_persuasion_pa_obj_log_apim")
+  file = file.path("models_cache_brms", "as_preregistered_persuasion_pa_obj_log_apim")
 )
 
 
@@ -1334,7 +1334,7 @@ persuasion_aff_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_persuasion_aff_ind")
+  file = file.path("models_cache_brms", "as_preregistered_persuasion_aff_ind")
 )
 
 
@@ -1417,7 +1417,7 @@ persuasion_aff_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_persuasion_aff_apim")
+  file = file.path("models_cache_brms", "as_preregistered_persuasion_aff_apim")
 )
 
 
@@ -1512,7 +1512,7 @@ persuasion_anticipAff_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_persuasion_anticipAff_ind")
+  file = file.path("models_cache_brms", "as_preregistered_persuasion_anticipAff_ind")
 )
 
 
@@ -1594,7 +1594,7 @@ persuasion_anticipAff_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_persuasion_anticipAff_apim")
+  file = file.path("models_cache_brms", "as_preregistered_persuasion_anticipAff_apim")
 )
 
 
@@ -1686,7 +1686,7 @@ persuasion_reactance_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_persuasion_reactance_ind")
+  file = file.path("models_cache_brms", "as_preregistered_persuasion_reactance_ind")
 )
 
 
@@ -1768,7 +1768,7 @@ persuasion_reactance_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_persuasion_reactance_apim")
+  file = file.path("models_cache_brms", "as_preregistered_persuasion_reactance_apim")
 )
 
 
@@ -2019,7 +2019,7 @@ pressure_pa_sub_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_pa_sub_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_pa_sub_ind")
 )
 
 
@@ -2103,7 +2103,7 @@ pressure_pa_sub_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_pa_sub_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_pa_sub_apim")
 )
 
 
@@ -2191,7 +2191,7 @@ pressure_pa_obj_log_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_pa_obj_log_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_pa_obj_log_ind")
 )
 
 
@@ -2275,7 +2275,7 @@ pressure_pa_obj_log_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_pa_obj_log_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_pa_obj_log_apim")
 )
 
 
@@ -2363,7 +2363,7 @@ pressure_aff_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_aff_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_aff_ind")
 )
 
 
@@ -2446,7 +2446,7 @@ pressure_aff_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_aff_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_aff_apim")
 )
 
 
@@ -2533,7 +2533,7 @@ pressure_anticipAff_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_anticipAff_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_anticipAff_ind")
 )
 
 
@@ -2615,7 +2615,7 @@ pressure_anticipAff_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_anticipAff_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_anticipAff_apim")
 )
 
 
@@ -2700,7 +2700,7 @@ pressure_reactance_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_reactance_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_reactance_ind")
 )
 
 
@@ -2782,7 +2782,7 @@ pressure_reactance_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pressure_reactance_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pressure_reactance_apim")
 )
 
 
@@ -3038,7 +3038,7 @@ pushing_pa_sub_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_pa_sub_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_pa_sub_ind")
 )
 
 
@@ -3125,7 +3125,7 @@ pushing_pa_sub_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_pa_sub_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_pa_sub_apim")
 )
 
 
@@ -3214,7 +3214,7 @@ pushing_pa_obj_log_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_pa_obj_log_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_pa_obj_log_ind")
 )
 
 
@@ -3302,7 +3302,7 @@ pushing_pa_obj_log_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_pa_obj_log_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_pa_obj_log_apim")
 )
 
 
@@ -3391,7 +3391,7 @@ pushing_aff_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_aff_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_aff_ind")
 )
 
 
@@ -3477,7 +3477,7 @@ pushing_aff_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_aff_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_aff_apim")
 )
 
 
@@ -3565,7 +3565,7 @@ pushing_anticipAff_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_anticipAff_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_anticipAff_ind")
 )
 
 
@@ -3650,7 +3650,7 @@ pushing_anticipAff_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_anticipAff_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_anticipAff_apim")
 )
 
 
@@ -3736,7 +3736,7 @@ pushing_reactance_ind <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_reactance_ind")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_reactance_ind")
 )
 
 
@@ -3821,7 +3821,7 @@ pushing_reactance_apim <- brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache", "as_preregistered_pushing_reactance_apim")
+  file = file.path("models_cache_brms", "as_preregistered_pushing_reactance_apim")
 )
 
 
