--- a/01_Analysis_Script_FINAL.Rmd
+++ b/01_Analysis_Script_FINAL.Rmd
@@ -30,7 +30,8 @@ library(kableExtra)
 library(brms)
 library(bayesplot)
 library(beepr)
-
+library(DHARMa)
+library(DHARMa.helpers)
 
 source(file.path('Functions', 'ReportModels.R'))
 source(file.path('Functions', 'PrettyTables.R'))
@@ -590,13 +591,10 @@ pa_sub <- my_brm(
 
 ```{r check_pa_sub, warning=FALSE}
 
-pp_check(pa_sub, type='hist')
-pp_check(pa_sub)
-
-loo(pa_sub)
-plot(pa_sub, ask = FALSE)
+check_brms(pa_sub, integer = TRUE, check_loo = FALSE)
 
 ```
+
 
 
 ```{r report_pa_sub, results='asis', warning=FALSE}
@@ -692,12 +690,8 @@ pa_obj_log <- my_brm(
 
 
 ```{r check_pa_obj_log, warning=FALSE}
-# plotting with the first imputed dataset. 
-pp_check(pa_obj_log, type='hist')
-pp_check(pa_obj_log)
 
-loo(pa_obj_log)
-plot(pa_obj_log, ask = FALSE)
+check_brms(pa_obj_log, integer = TRUE, check_loo = FALSE)
 
 ```
 
@@ -791,11 +785,7 @@ mood <- my_brm(
 
 ```{r check_mood, warning=FALSE}
 
-pp_check(mood, type='hist')
-pp_check(mood)
-
-loo(mood)
-plot(mood, ask = FALSE)
+check_brms(mood, integer = FALSE, check_loo = FALSE)
 
 ```
 
@@ -889,11 +879,7 @@ reactance <- my_brm(
 
 ```{r check_reactance, warning=FALSE}
 
-pp_check(reactance, type='hist')
-pp_check(reactance)
-
-loo(reactance)
-plot(reactance, ask = FALSE)
+check_brms(reactance, integer = FALSE, check_loo = FALSE)
 
 ```
 
@@ -972,7 +958,7 @@ reactance_ordinal <- my_brm(
   prior = prior1,
   data = df_double, 
   family = brms::cumulative(),
-  #control = list(adapt_delta = 0.95, max_treedepth = 15),
+  control = list(adapt_delta = 0.95),
   iter = 5000,
   warmup = 2000,
   chains = 4,
@@ -987,11 +973,7 @@ reactance_ordinal <- my_brm(
 
 ```{r check_reactance_ordinal, warning=FALSE}
 
-pp_check(reactance_ordinal, type='hist')
-pp_check(reactance_ordinal)
-
-loo(reactance_ordinal)
-plot(reactance_ordinal, ask = FALSE)
+check_brms(reactance_ordinal, integer = FALSE, check_loo = FALSE)
 
 ```
 
@@ -1091,11 +1073,7 @@ is_reactance <- my_brm(
 
 ```{r check_is_reactance, warning=FALSE}
 
-pp_check(is_reactance, type='hist')
-pp_check(is_reactance)
-
-try(loo(is_reactance))
-plot(is_reactance, ask = FALSE)
+check_brms(is_reactance, integer = FALSE, check_loo = FALSE)
 
 ```
 
