--- a/00AnalysisExperimentalImprovements.Rmd
+++ b/00AnalysisExperimentalImprovements.Rmd
@@ -574,7 +574,8 @@ pa_sub <- my_brm(
   formula = formula, 
   prior = prior1,
   data = df_double, 
-  family = brms::negbinomial(),
+  hu = ~.,
+  family = hurdle_negbinomial(),
   #control = list(adapt_delta = 0.99),
   iter = 5000,
   warmup = 2000,
